--- a/index.html
+++ b/index.html
@@ -6,22 +6,34 @@
     <title>تطبيق أسعار الذهب - شركة أنس وبراء العربية</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <!-- إعلانات AdMob -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6482443556196062"
-     crossorigin="anonymous"></script>
+    <!-- إعلان Adstera Banner -->
+    <script type="text/javascript">
+        atOptions = {
+            'key' : '4cf1fc621627d1097f69a9f5f4d9d1ea',
+            'format' : 'iframe',
+            'height' : 600,
+            'width' : 160,
+            'params' : {}
+        };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/4cf1fc621627d1097f69a9f5f4d9d1ea/invoke.js"></script>
+    
+    <!-- إعلان Popunder -->
+    <script type='text/javascript' src='//pl27911365.effectivegatecpm.com/f0/81/ee/f081ee9b4f34a12ceee7b9aa16bc00ac.js'></script>
 </head>
 <body>
-    <!-- إعلان أعلى الصفحة -->
+    <!-- إعلان Adstera أعلى الصفحة -->
     <div class="ad-container top-ad">
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-6482443556196062"
-             data-ad-slot="1234567890"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-        <script>
-             (adsbygoogle = window.adsbygoogle || []).push({});
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '4cf1fc621627d1097f69a9f5f4d9d1ea',
+                'format' : 'iframe',
+                'height' : 250,
+                'width' : 300,
+                'params' : {}
+            };
         </script>
+        <script type="text/javascript" src="//www.highperformanceformat.com/4cf1fc621627d1097f69a9f5f4d9d1ea/invoke.js"></script>
     </div>
 
     <div class="container">
@@ -37,17 +49,18 @@
             </div>
         </header>
 
-        <!-- إعلان في المنتصف -->
+        <!-- إعلان Adstera في المنتصف -->
         <div class="ad-container middle-ad">
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-6482443556196062"
-                 data-ad-slot="0987654321"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-            <script>
-                 (adsbygoogle = window.adsbygoogle || []).push({});
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : '4cf1fc621627d1097f69a9f5f4d9d1ea',
+                    'format' : 'iframe',
+                    'height' : 90,
+                    'width' : 728,
+                    'params' : {}
+                };
             </script>
+            <script type="text/javascript" src="//www.highperformanceformat.com/4cf1fc621627d1097f69a9f5f4d9d1ea/invoke.js"></script>
         </div>
 
         <main>
@@ -163,17 +176,18 @@
                 </div>
             </div>
 
-            <!-- إعلان آخر -->
+            <!-- إعلان Adstera آخر -->
             <div class="ad-container bottom-ad">
-                <ins class="adsbygoogle"
-                     style="display:block"
-                     data-ad-client="ca-pub-6482443556196062"
-                     data-ad-slot="1122334455"
-                     data-ad-format="auto"
-                     data-full-width-responsive="true"></ins>
-                <script>
-                     (adsbygoogle = window.adsbygoogle || []).push({});
+                <script type="text/javascript">
+                    atOptions = {
+                        'key' : '4cf1fc621627d1097f69a9f5f4d9d1ea',
+                        'format' : 'iframe',
+                        'height' : 250,
+                        'width' : 300,
+                        'params' : {}
+                    };
                 </script>
+                <script type="text/javascript" src="//www.highperformanceformat.com/4cf1fc621627d1097f69a9f5f4d9d1ea/invoke.js"></script>
             </div>
 
             <div class="tools-section">
