--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>تطبيق أسعار الذهب - شركة أنس وبراء العربية</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    
     <!-- إعلان Adstera Banner -->
     <script type="text/javascript">
         atOptions = {
@@ -44,7 +45,7 @@
                 <p id="current-date">--/--/----</p>
                 <div class="live-indicator">
                     <i class="fas fa-circle"></i>
-                    <span>أسعار حقيقية محدثة</span>
+                    <span>أسعار حقيقية من GoldPriceData.com</span>
                 </div>
             </div>
         </header>
@@ -82,12 +83,12 @@
 
             <div class="stats-bar">
                 <div class="stat-item">
-                    <span class="stat-label">سعر الأونصة العالمي:</span>
-                    <span class="stat-value" id="global-ounce">$4,257.06</span>
+                    <span class="stat-label">مصدر البيانات:</span>
+                    <span class="stat-value">GoldPriceData.com</span>
                 </div>
                 <div class="stat-item">
-                    <span class="stat-label">التغير اليوم:</span>
-                    <span class="stat-value" id="daily-change">↑ 1.10%</span>
+                    <span class="stat-label">حالة التحديث:</span>
+                    <span class="stat-value" id="update-status">جاري جلب الأسعار...</span>
                 </div>
                 <div class="stat-item">
                     <span class="stat-label">آخر تحديث:</span>
@@ -103,8 +104,8 @@
                         <i class="fas fa-gem"></i>
                         <h3>ذهب 24 قيراط</h3>
                     </div>
-                    <div class="price" id="k24-price">ج.م 6,523.57</div>
-                    <div class="change negative" id="k24-change">↓ 0.25%</div>
+                    <div class="price" id="k24-price">--</div>
+                    <div class="change" id="k24-change">--</div>
                     <div class="card-footer">
                         <small>أنقى أنواع الذهب</small>
                     </div>
@@ -116,8 +117,8 @@
                         <i class="fas fa-crown"></i>
                         <h3>ذهب 22 قيراط</h3>
                     </div>
-                    <div class="price" id="k22-price">ج.م 5,979.94</div>
-                    <div class="change positive" id="k22-change">↑ 1.20%</div>
+                    <div class="price" id="k22-price">--</div>
+                    <div class="change" id="k22-change">--</div>
                     <div class="card-footer">
                         <small>شائع في المجوهرات</small>
                     </div>
@@ -129,8 +130,8 @@
                         <i class="fas fa-ring"></i>
                         <h3>ذهب 21 قيراط</h3>
                     </div>
-                    <div class="price" id="k21-price">ج.م 5,708.13</div>
-                    <div class="change positive" id="k21-change">↑ 1.25%</div>
+                    <div class="price" id="k21-price">--</div>
+                    <div class="change" id="k21-change">--</div>
                     <div class="card-footer">
                         <small>الأكثر استخداماً</small>
                     </div>
@@ -142,8 +143,8 @@
                         <i class="fas fa-star"></i>
                         <h3>ذهب 18 قيراط</h3>
                     </div>
-                    <div class="price" id="k18-price">ج.م 4,892.68</div>
-                    <div class="change positive" id="k18-change">↑ 2.65%</div>
+                    <div class="price" id="k18-price">--</div>
+                    <div class="change" id="k18-change">--</div>
                     <div class="card-footer">
                         <small>للذهب الأبيض</small>
                     </div>
@@ -155,8 +156,8 @@
                         <i class="fas fa-weight-hanging"></i>
                         <h3>أونصة الذهب</h3>
                     </div>
-                    <div class="price" id="ounce-price">ج.م 202,883.12</div>
-                    <div class="change positive" id="ounce-change">↑ 1.30%</div>
+                    <div class="price" id="ounce-price">--</div>
+                    <div class="change" id="ounce-change">--</div>
                     <div class="card-footer">
                         <small>السعر العالمي</small>
                     </div>
@@ -168,8 +169,8 @@
                         <i class="fas fa-weight"></i>
                         <h3>جرام الذهب</h3>
                     </div>
-                    <div class="price" id="gram-price">ج.م 6,523.57</div>
-                    <div class="change negative" id="gram-change">↓ 0.93%</div>
+                    <div class="price" id="gram-price">--</div>
+                    <div class="change" id="gram-change">--</div>
                     <div class="card-footer">
                         <small>سعر الجرام 24</small>
                     </div>
@@ -209,7 +210,7 @@
                             </select>
                         </div>
                         <button id="calculate-btn">احسب السعر</button>
-                        <div class="result" id="calc-result">ج.م 5,708.13</div>
+                        <div class="result" id="calc-result">--</div>
                     </div>
                 </div>
 
@@ -218,15 +219,15 @@
                     <div class="info-content">
                         <div class="info-item">
                             <span class="info-label">سعر الأونصة العالمية:</span>
-                            <span class="info-value" id="global-ounce-price">$4,257.06</span>
+                            <span class="info-value" id="global-ounce-price">--</span>
                         </div>
                         <div class="info-item">
                             <span class="info-label">سعر الجرام الدولي:</span>
-                            <span class="info-value" id="global-gram-price">$136.88</span>
+                            <span class="info-value" id="global-gram-price">--</span>
                         </div>
                         <div class="info-item">
-                            <span class="info-label">حالة التحديث:</span>
-                            <span class="info-value" id="update-status">جاري التحميل...</span>
+                            <span class="info-label">التغير اليوم:</span>
+                            <span class="info-value" id="daily-change">--</span>
                         </div>
                     </div>
                 </div>
@@ -286,14 +287,14 @@
             <div class="footer-content">
                 <p>آخر تحديث: <span id="footer-update">--:--:--</span></p>
                 <p>جميع الحقوق محفوظة &copy; 2024 شركة أنس وبراء العربية</p>
-                <p class="disclaimer">الأسعار للاسترشاد فقط - قد تختلف الأسعار الفعلية</p>
+                <p class="disclaimer">الأسعار من GoldPriceData.com - للاسترشاد فقط</p>
             </div>
         </footer>
     </div>
 
     <div class="loading" id="loading">
         <div class="spinner"></div>
-        <p>جاري تحديث الأسعار...</p>
+        <p>جاري جلب أحدث الأسعار...</p>
     </div>
 
     <script src="script.js"></script>
