--- a/index.html
+++ b/index.html
@@ -614,7 +614,6 @@
         <!-- إعلان البانر العلوي -->
         <div class="ad-banner horizontal">
             <div class="ad-placeholder">
-                إعلان 728x90
                 <script type="text/javascript">
                     atOptions = {
                         'key' : '9a7857a3d4ae7e904f1c6fa07d7d6833',
@@ -698,15 +697,23 @@
                 <!-- إعلان 1 -->
                 <div class="ad-banner vertical">
                     <div class="ad-placeholder">
-                        إعلان 300x250
-                        <script type='text/javascript' src='//pl27922477.effectivegatecpm.com/bf/64/cd/bf64cdf7dec16bd53e6ea518c5795a28.js'></script>
+                        <script type="text/javascript">
+                            atOptions = {
+                                'key' : '7f5e2ab047fbec5b7a12dcc37a739251',
+                                'format' : 'iframe',
+                                'height' : 250,
+                                'width' : 300,
+                                'params' : {}
+                            };
+                        </script>
+                        <script type="text/javascript" src="//www.highperformanceformat.com/7f5e2ab047fbec5b7a12dcc37a739251/invoke.js"></script>
                     </div>
                 </div>
                 
                 <!-- إعلان 2 -->
                 <div class="ad-banner square">
                     <div class="ad-placeholder">
-                        إعلان 300x250
+                        <script type='text/javascript' src='//pl27922477.effectivegatecpm.com/bf/64/cd/bf64cdf7dec16bd53e6ea518c5795a28.js'></script>
                     </div>
                 </div>
             </div>
